fixed bug when nav bar overlap section.design-it box and img element

--- a/assets/layout.css
+++ b/assets/layout.css
@@ -14,6 +14,7 @@ section {
     height: 4rem;
     display: flex;
     justify-content: space-between;
+    z-index: 99;
 }
 
 .navbar-header * {
@@ -248,15 +249,13 @@ section.design-it .container-top {
 
 .design-it .box-big .box-small {
     flex: 0 1 50%;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .design-it .box-big .box-small img {
     max-width: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .design-it .box-big.middle {
